--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.11.0",
     "fastify": "^5.4.0",
+    "prisma": "^6.11.0",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
